kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-backend
  namespace: chat-app
spec:
  selector:
    matchLabels:
      app: chat-app-backend
  template:
    metadata:
      labels:
        app: chat-app-backend
    spec:
      containers:
      - name: chat-app-backend
        image: ahmadcloudworks/chat-app-backend
        ports:
        - containerPort: 5001
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
