kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: chat-app
  labels:
    name: myingress
    namespace: chat-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Corrected the annotation name
spec:
  rules:
  - host: chat-tws.com  # Your domain name
    http:
      paths:
      - pathType: Prefix
        path: "/frontend"  # Path for frontend service
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: "/backend"  # Path for backend service
        backend:
          service:
            name: backend
            port:
              number: 5001
